--- a/client/src/components/Navigation/index.scss
+++ b/client/src/components/Navigation/index.scss
@@ -1,13 +1,27 @@
+@import '../../static/css/default.scss';
+
 .main-header-box{
     position: relative;
     height: 60px;
-    background-color: #fff;
 }
 
 .main_head{
-    height: 100%;
+    width: 100%;
+    height: 60px;
+    border-bottom: 1px solid #f1f1f1;
+    position: fixed;
+    top: 0;
+    left: 0;
+    transition: all .2s;
+    transform: translate3d(0,-100%,0);
+    z-index: 250;
+    background-color: $default-background;
 }
 
+.visable{
+    composes:main_head;
+    transform: translateZ(0);
+}
 .main_nav{
     height: 100%;
 }
@@ -20,14 +34,42 @@
     margin:  auto;
 }
 
+.container {
+    a{
+        img{
+            height: 38px;
+        }
+    }
+}
+
 .nav-list{
     height: 100%;
     list-style: none;
+
+    li{
+        float: left;
+    }
 }
 
+
 .nav-item{
-    color: #71777c;
-    font-size: 14px;
+    font-size: 16px;
+    color: $default-font;
+    height: 100%;
+    line-height: 60px;
+    padding: 0 20px;
+    float: left;
+    &:hover{
+        color: $default-active;
+    }
+
+    a{
+        color: inherit;
+    }
+}
+
+.link-item{
+    color: $default-active !important;
 }
 
 .main-nav-list{
@@ -50,8 +92,20 @@
     margin-right: .5rem;
 }
 
-.phone-show-menu .arrow-down{
-    font-size: 12px;
+.phone-show-menu {
+    .arrow-down{
+        font-size: 12px;
+    }
+}
+
+.with-view-nav{
+    width: 100%;
+    height: 44px;
+    background-color: $default-background;
+    position: fixed;
+    top: 60px;
+    left: 0;
+    z-index: 100px;
 }
 @media(max-width:980px){
     .phone-show-menu{
@@ -62,8 +116,20 @@
         font-size: 15px;
         padding: 0 20px;
     }
+
+    .nav-item{
+        display: none;
+    }
 }
+.login,
+.register{
+    color: #007fff;
 
-.logo{
-
+    &:hover{
+        color: #1973ed;
+    }
+}
+.login::after{
+    content: "\B7";
+    margin: 5px;
 }
